--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 ﻿{
-  "instance_code": "working",
+  "instance_code": "Development",
   "zephyr_environments_connection_string": "Data Source=192.168.2.231;Initial Catalog=ZephyrEnvironments;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123;Max Pool Size=500;",
   "sql_server_databases": [
     "Master",
