--- a/config.json
+++ b/config.json
@@ -18,5 +18,6 @@
     "ConfigurationDb"
   ],
   "maria_db_dsn":"maria_db",
-  "mongo_db_string":"mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017"
+  "mongo_db_string":"mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017",
+  "error_file_path": "C:\\Users\\praveenkumar\\Documents\\UiPath\\infrastructure_check\\infrastructure_check"
 }
