--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 ﻿{
-  "instance_code": "Development",
+  "instance_code": "Working",
   "zephyr_environments_connection_string": "Data Source=192.168.2.231;Initial Catalog=ZephyrEnvironments;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123;Max Pool Size=500;",
   "sql_server_databases": [
     "Master",
@@ -19,5 +19,15 @@
   ],
   "maria_db_dsn":"maria_db",
   "mongo_db_string":"mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017",
-  "error_file_path": "C:\\Users\\praveenkumar\\Documents\\UiPath\\infrastructure_check\\infrastructure_check"
+  "error_file_path": "C:\\Users\\praveenkumar\\Documents\\UiPath\\infrastructure_check\\infrastructure_check",
+  "api_code":[
+  	   "zadmin",
+      "clientservicertb",
+	  "userservicertb",
+	  "authservicertb",
+	  "payrollservicertb",
+	  "billingservicertb",
+	  "reportservicertb",
+	  "formservicertb"
+  ]
 }
