with medicationservicertb & changeorderservicertb

--- a/config.json
+++ b/config.json
@@ -21,6 +21,8 @@
   "mongo_db_string":"mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017",
   "error_file_path": "C:\\Users\\praveenkumar\\Documents\\UiPath\\infrastructure_check\\infrastructure_check",
   "api_code":[
+	  "medicationservicertb",
+	  "changeorderservicertb",
   	   "zadmin",
       "clientservicertb",
 	  "userservicertb",
