with particular mongo databases

--- a/config.json
+++ b/config.json
@@ -17,6 +17,11 @@
     "CaretrackerMaria",
     "ConfigurationDb"
   ],
+  "mongo_databases":[
+	  "ATSH",
+  	"caretracker_working",
+	 "caretracker_fob_working"
+  ],
   "maria_db_dsn":"maria_db_working",
   "mongo_db_string":"mongodb://mvvuser:QXWH7GbMRVSg3FM4q@192.168.5.5:27017",
   "error_file_path": "C:\\Users\\praveenkumar\\Documents\\UiPath\\infrastructure_check\\infrastructure_check",
