--- a/config.json
+++ b/config.json
@@ -42,6 +42,14 @@
 	  "publishservice",
 	  "clinicianservicertb"
   ],
+   "apis_without_swagger": ["authservicertb","changeorderservicertb"
+  ],
   "hha":1,
-  "user_id":1
+  "user_id":1,
+  "recipient_list":[
+	  "kenneth.h@kanrad.com",
+	  "praveenkk21@gmail.com"
+  ],
+  "error_subject":"error logged from UiPath",
+  "success_subject":"No error found"
 }
