--- a/project.json
+++ b/project.json
@@ -7,6 +7,8 @@
     "InternalLabs.MongoDB.Activities": "[1.0.1]",
     "UiPath.Database.Activities": "[1.7.1]",
     "UiPath.Excel.Activities": "[2.22.0-preview]",
+    "UiPath.GSuite.Activities": "2.2.5",
+    "UiPath.Mail.Activities": "[1.21.0-preview]",
     "UiPath.System.Activities": "23.8.1-preview",
     "UiPath.Testing.Activities": "[23.8.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.6.2-preview]",
