before private db

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "zephyr_environments_connection_string": "Data Source=192.168.2.231;Initial Catalog=ZephyrEnvironments;Persist Security Info=True;User ID=medicaresqluser;Password=kantime_123",
   "sql_server_databases": [
     "Master",
-	 "Private",
+	 "Private/192.168.2.231/Working_Zephyr4",
     "WebLogs",
     "KTLogs",
     "MedicationLexi"    
