--- a/config.json
+++ b/config.json
@@ -54,7 +54,7 @@
    "sender_mail_pwd":"snvlkpfdpiwyoyvf",
   "recipient_list":[
 	  "kenneth.h@kanrad.com",
-	  "praveenkk21@gmail.com"
+	  "saif.zeya@kanrad.com"
   ],
   "error_subject":"Error logged from UiPath",
   "success_subject":"UiPath Execution successful "
